# gst-plugin-rust-av

./: .travis.yml  Cargo.toml
src/: avdecoder.rs  lib.rs
