[package]
name = "gst-plugin-rust-av"
version = "0.1.0"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
license = "LGPL-2.1+"

[dependencies]
glib = { git = "https://github.com/gtk-rs/glib" }
gstreamer = { git = "https://github.com/sdroege/gstreamer-rs" }
gstreamer-audio = { git = "https://github.com/sdroege/gstreamer-rs" }
gstreamer-base = { git = "https://github.com/sdroege/gstreamer-rs" }
#gstreamer-video = { git = "https://github.com/sdroege/gstreamer-rs" }
gobject-subclass = { git = "https://github.com/sdroege/gobject-subclass" }
gst-plugin = { git = "https://github.com/sdroege/gst-plugin-rs" }
#av-bitstream = { git = "https://github.com/rust-av/rust-av" }
av-data = { git = "https://github.com/rust-av/rust-av" }
av-codec = { git = "https://github.com/rust-av/rust-av" }
#av-format = { git = "https://github.com/rust-av/rust-av" }
#libvpx = { git = "https://github.com/rust-av/vpx-rs", features = ["codec-trait"] }
#libopus = { git = "https://github.com/rust-av/opus-rs", features = ["codec-trait"] }
#matroska = { git = "https://github.com/rust-av/matroska" }
av-vorbis = { git = "https://github.com/rust-av/av-vorbis" }
num-rational = "0.1"

[lib]
name = "gstrustav"
crate-type = ["cdylib"]
path = "src/lib.rs"

[profile.release]
lto = true
opt-level = 3
debug = true
panic = 'unwind'

